--- a/Windows/WinSrv.vcxproj
+++ b/Windows/WinSrv.vcxproj
@@ -246,7 +246,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='LibDebug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>../Library/Arsenal/Arsenal</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../Library/Arsenal/Arsenal;../Common</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;__LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
@@ -273,7 +273,7 @@
     <ClCompile>
       <AdditionalOptions>/Zi %(AdditionalOptions)</AdditionalOptions>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>../Library/Arsenal/Arsenal</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../Library/Arsenal/Arsenal;../Common</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN64;_WINDOWS;_DEBUG; __LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -328,7 +328,7 @@
       <IntrinsicFunctions>false</IntrinsicFunctions>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <WholeProgramOptimization>true</WholeProgramOptimization>
-      <AdditionalIncludeDirectories>../Library/Arsenal/Arsenal</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../Library/Arsenal/Arsenal;../Common</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;NDEBUG;__LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
@@ -355,7 +355,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
       <WholeProgramOptimization>true</WholeProgramOptimization>
-      <AdditionalIncludeDirectories>../Library/Arsenal/Arsenal</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../Library/Arsenal/Arsenal;../Common</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN64;_WINDOWS;NDEBUG; __LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
@@ -384,6 +384,7 @@
     <ResourceCompile Include="WinSrv.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Common\NetMessage.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
