--- a/trunk/Windows/WinSrv.vcxproj
+++ b/trunk/Windows/WinSrv.vcxproj
@@ -386,12 +386,14 @@
   <ItemGroup>
     <ClInclude Include="..\Common\NetMessage.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="ServerService.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WinSrv.h" />
     <ClInclude Include="WinSrvDlg.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ServerService.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='LibDebug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='LibRelease|Win32'">Create</PrecompiledHeader>
