--- a/trunk/Windows/WinSrv.vcxproj.filters
+++ b/trunk/Windows/WinSrv.vcxproj.filters
@@ -13,6 +13,12 @@
     <ClCompile Include="ServerService.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
+    <ClCompile Include="SendKeys.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Shortcut.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Resource.h">
@@ -34,6 +40,12 @@
       <Filter>Common</Filter>
     </ClInclude>
     <ClInclude Include="ServerService.h">
+      <Filter>Header</Filter>
+    </ClInclude>
+    <ClInclude Include="SendKeys.h">
+      <Filter>Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Shortcut.h">
       <Filter>Header</Filter>
     </ClInclude>
   </ItemGroup>
