--- a/Windows/WinSrv.vcxproj
+++ b/Windows/WinSrv.vcxproj
@@ -376,6 +376,9 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="C:\Users\Administrator\Desktop\iPhone Simulator.ico" />
+    <None Include="res\icon1.ico" />
+    <None Include="res\iPhone Simulator.ico" />
     <None Include="res\WinSrv.ico" />
     <None Include="res\WinSrv.rc2" />
     <None Include="ReadMe.txt" />
