--- a/Windows/WinSrv.vcxproj.filters
+++ b/Windows/WinSrv.vcxproj.filters
@@ -57,6 +57,9 @@
       <Filter>res</Filter>
     </None>
     <None Include="ReadMe.txt" />
+    <None Include="res\icon1.ico" />
+    <None Include="C:\Users\Administrator\Desktop\iPhone Simulator.ico" />
+    <None Include="res\iPhone Simulator.ico" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="res">
